--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "rollup-plugin-peer-deps-external": "^2.2.3",
     "rollup-plugin-typescript2": "^0.27.1",
     "ts-jest": "^26.1.3",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "dot-prop": ">=5.1.1"
   },
   "jest": {
     "preset": "ts-jest",
