--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.3",
     "rollup-plugin-typescript2": "^0.27.1",
+    "serialize-javascript": ">=3.1.0",
     "ts-jest": "^26.1.3",
     "typescript": "^3.9.7"
   },
