ignore build and modules in jest

--- a/package.json
+++ b/package.json
@@ -44,7 +44,11 @@
   },
   "jest": {
     "preset": "ts-jest",
-    "testEnvironment": "jsdom"
+    "testEnvironment": "jsdom",
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/build/"
+    ]
   },
   "files": [
     "build"
