--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -15,11 +15,11 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: "16.15.1"
-          cache: "yarn"
+          cache: "npm"
       - name: Install Dependencies
-        run: yarn install
+        run: npm install
       - name: Run Unit Tests
-        run: yarn test:coverage
+        run: npm run test:coverage
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
