--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "jsnext:main": "build/index.es.js",
   "scripts": {
     "build": "rollup -c",
-    "test": "jest -u"
+    "test": "jest -u",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [
     "react",
